# SymPy-Symengine

./: LICENSE  Mechanics.ipynb  README.md  SymPy vs Symengine.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
