[tool.poetry]
name = "sympy-symengine"
version = "0.1.0"
description = ""
authors = ["Sangyub Lee <sylee957@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
symengine = "^0.10.0"
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
